<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_text"
        style="@style/TextTitle" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle_text"
        style="@style/TextSubtitle" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_below="@id/subtitleTextView"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_centerHorizontal="true"
        android:text="@string/description_text"
        style="@style/TextBody" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTextView"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/edit_text_hint"
        style="@style/EditTextStyle" />

    <Button
        android:id="@+id/actionButton"
        android:layout_below="@id/editText"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text"
        style="@style/ButtonStyle" />
</RelativeLayout>
